--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.1
   flutter_screenutil: ^5.4.0
   lottie: ^1.2.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
