--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   lottie: ^1.2.2
   intl: ^0.17.0
   http: ^0.13.4
+  cached_network_image: ^3.2.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
