--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.4
   cached_network_image: ^3.2.0
   url_launcher: ^6.1.5
+  another_flushbar: <=1.10.28
 
 dev_dependencies:
   flutter_test:
