--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
         classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
