--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+
+  #State Management
   get: ^4.6.1
-  flutter_screenutil: ^5.4.0
-  lottie: ^1.2.2
-  intl: ^0.17.0
-  http: ^0.13.4
-  cached_network_image: ^3.2.0
-  url_launcher: ^6.1.5
-  another_flushbar: <=1.10.28
+
+  #Firebase
   firebase_core: ^1.20.1
   firebase_crashlytics: ^2.8.7
+
+  #Network
+  intl: ^0.17.0
+  http: ^0.13.4
+  url_launcher: ^6.1.5
+
+  #UI Operations
+  flutter_screenutil: ^5.4.0
+  lottie: ^1.2.2
+  cached_network_image: ^3.2.0
+  another_flushbar: <=1.10.28
+
+  #Other
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
