--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.13'
-        classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.google.gms:google-services:4.3.8' // crashlytics
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1' // crashlytics
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
