--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   lottie: ^1.2.2
   cached_network_image: ^3.2.0
   another_flushbar: <=1.10.28
+  kartal: ^2.8.0
 
   #Other
   cupertino_icons: ^1.0.2
@@ -39,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.10.0
+  flutter_lints: ^2.0.1
 
 flutter_icons:
   android: "launcher_icon"
