--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^1.20.1
   firebase_crashlytics: ^2.8.7
   firebase_performance: ^0.8.3+3
+  firebase_core_platform_interface: 4.5.1
 
   #Network
   intl: ^0.17.0
