--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 2.0.0+2000
+version: 3.0.0+3000
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 
 dependencies:
@@ -15,35 +15,37 @@ dependencies:
     sdk: flutter
 
   #State Management
-  get: ^4.6.1
+  get: ^4.6.6
 
   #Firebase
-  firebase_core: ^1.20.1
-  firebase_crashlytics: ^2.8.7
-  firebase_performance: ^0.8.3+3
-  firebase_core_platform_interface: 4.5.1
+  firebase_core: ^2.17.0
+  firebase_crashlytics: ^3.3.7
+  firebase_performance: ^0.9.2+7
+  firebase_core_platform_interface: 4.8.0
 
   #Network
-  intl: ^0.17.0
-  http: ^0.13.4
-  url_launcher: ^6.1.5
+  intl: ^0.18.1
+  http: ^1.1.0
+  url_launcher: ^6.1.14
 
   #UI Operations
-  flutter_screenutil: ^5.4.0
-  lottie: ^1.2.2
-  cached_network_image: ^3.2.0
+  flutter_screenutil: ^5.9.0
+  lottie: ^1.4.3
+  cached_network_image: ^3.3.0
   another_flushbar: <=1.10.28
-  kartal: ^2.8.0
+  kartal: ^3.4.4
 
   #Other
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.10.0
-  flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.3
+  very_good_analysis: ^5.1.0
+
 
 flutter_icons:
   android: "launcher_icon"
